--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,7 +4,8 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - run: npm install -g bats
-      - run: bats -v
+      - run: apt-get -y install python-software-properties
+      - run: add-apt-repository ppa:ondrej/php
+      - run: apt-get update && apt-get install -y php5.6
+      - run: php -v
+  
