--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,8 +4,8 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - run: apt-get -y install python-software-properties
-      - run: add-apt-repository ppa:ondrej/php
-      - run: apt-get update && apt-get install -y php5.6
+      - run: sudo apt-get -y install python-software-properties
+      - run: sudo add-apt-repository ppa:ondrej/php
+      - run: sudo apt-get update && sudo apt-get install -y php5.6
       - run: php -v
   
