--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -6,5 +6,7 @@ jobs:
     steps:
       - run: sudo add-apt-repository ppa:ondrej/php
       - run: sudo apt-get update && sudo apt-get install -y php5.6
+      - run: sudo apt-get install php5.6-igbinary php5.6-mbstring php5.6-mcrypt php5.6-soap php5.6-redis php5.6-intl php5.6-mcrypt php5.6-mysqli php5.6-xml  
       - run: php -v
+      - run: php56 -v  
   
