--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,9 +4,5 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo add-apt-repository ppa:ondrej/php
-      - run: sudo apt-get update && sudo apt-get install -y php5.6
-      - run: sudo apt-get install php5.6-igbinary php5.6-mbstring php5.6-mcrypt php5.6-soap php5.6-redis php5.6-intl php5.6-mcrypt php5.6-mysqli php5.6-xml  
-      - run: php -v
-      - run: php56 -v  
-  
+      - run: mysql -uroot -proot -e "CREATE DATABASE dbname;"
+
