--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,7 +2,7 @@ name: run-tests
 on: [push]
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-      - run: sudo mysql -u root -prppt -e "SHOW databases"
+      - run: sudo mysql -u root -proot -e "SHOW databases"
 
