--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,13 +7,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - run: sudo systemctl start mysql.service
-      - run: sudo mysql -u root -proot -e "SHOW databases"
       - run: sudo add-apt-repository ppa:ondrej/php
       - run: sudo apt-get update && sudo apt-get install -y php5.6
       - run: sudo apt-get install php5.6-igbinary php5.6-mbstring php5.6-mcrypt php5.6-soap php5.6-redis php5.6-intl php5.6-mcrypt php5.6-mysqli php5.6-xml  
       - run: sudo rm -f /usr/bin/php && sudo ln -s /usr/bin/php5.6 /usr/bin/php  
-      - run: php -v
-      - run: php5.6 -v  
-      - run: whereis php
-      - run: whereis php5.6
+      - run: sudo mysql -u root -proot < ./db-schema/schema.sql
+      
   
