--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - run: pwd
+      - uses: actions/checkout@v2
       - run: sudo systemctl start mysql.service
       - run: sudo add-apt-repository ppa:ondrej/php
       - run: sudo apt-get update && sudo apt-get install -y php5.6
