--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,6 +16,7 @@ jobs:
       - run: sudo rm -f /usr/bin/php && sudo ln -s /usr/bin/php5.6 /usr/bin/php  
       - run: ls -al
       - run: ls -al ./db-schema    
-      - run: mysql -u root -proot < ./db-schema/schema.sql
+      - run: mysql -u root -proot -e 'CREATE DATABASE test_database'
+      - run: mysql -u root -proot test_database < ./db-schema/schema.sql
       
   
