--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,15 +7,13 @@ jobs:
   tests:
     runs-on: ubuntu-20.04
     steps:
-      - run: pwd
-      - uses: actions/checkout@v2
       - run: sudo systemctl start mysql.service
       - run: sudo add-apt-repository ppa:ondrej/php
       - run: sudo apt-get update && sudo apt-get install -y php5.6
       - run: sudo apt-get install php5.6-igbinary php5.6-mbstring php5.6-mcrypt php5.6-soap php5.6-redis php5.6-intl php5.6-mcrypt php5.6-mysqli php5.6-xml  
-      - run: sudo rm -f /usr/bin/php && sudo ln -s /usr/bin/php5.6 /usr/bin/php  
-      - run: ls -al
-      - run: ls -al ./db-schema    
+      - run: sudo rm -f /usr/bin/php && sudo ln -s /usr/bin/php5.6 /usr/bin/php
+      - run: curl -O https://github.com/composer/composer/releases/download/1.6.5/composer.phar && sudo mv composer.phar /usr/bin/composer && chmod +x /usr/bin/composer
+      - uses: actions/checkout@v2
       - run: mysql -u root -proot -e 'CREATE DATABASE test_database'
       - run: mysql -u root -proot test_database < ./db-schema/schema.sql
       
