--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,8 +12,10 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install -y php5.6
       - run: sudo apt-get install php5.6-igbinary php5.6-mbstring php5.6-mcrypt php5.6-soap php5.6-redis php5.6-intl php5.6-mcrypt php5.6-mysqli php5.6-xml  
       - run: sudo rm -f /usr/bin/php && sudo ln -s /usr/bin/php5.6 /usr/bin/php
-      - run: curl -O https://github.com/composer/composer/releases/download/1.6.5/composer.phar
+      - run: curl -O -L https://github.com/composer/composer/releases/download/1.6.5/composer.phar && sudo cp composer.phar /usr/bin/composer && sudo chmod +x /usr/bin/composer
       - run: php composer.phar -v  
+      - run: composer -v
+#      - run: php composer.phar require --dev phpunit/phpunit ^5 
       - uses: actions/checkout@v2
       - run: mysql -u root -proot -e 'CREATE DATABASE test_database'
       - run: mysql -u root -proot test_database < ./db-schema/schema.sql
