added another test

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "classmap": [
-            "src/"
+            "src/",
+	    "config.php"
         ]
     },
     "require-dev": {
