--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,5 +17,6 @@ jobs:
       - uses: actions/checkout@v2
       - run: mysql -u root -proot test_database < ./db-schema/schema.sql
       - run: composer install
-      - run: ./vendor/bin/phpunit --testdox tests/*
+      - run: cp .github/workflows/config-template.php config.php 
+      - run: ./vendor/bin/phpunit --debug tests/*
   
