--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,6 +7,7 @@ jobs:
   tests:
     runs-on: ubuntu-20.04
     steps:
+      - run: cat /etc/mysql/mysql.conf.d/mysqld.cnf
       - run: sudo systemctl start mysql.service
       - run: sudo add-apt-repository ppa:ondrej/php
       - run: sudo apt-get update && sudo apt-get install -y php5.6
