--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,8 +7,8 @@ jobs:
   tests:
     runs-on: ubuntu-20.04
     steps:
-      - run: echo 'collation-server = utf8_unicode_ci' >> /etc/mysql/mysql.conf.d/mysqld.cnf  
-      - run: echo 'character-set-server = utf8' >> /etc/mysql/mysql.conf.d/mysqld.cnf
+      - run: sudo bash -c "echo 'collation-server = utf8_unicode_ci' >> /etc/mysql/mysql.conf.d/mysqld.cnf"
+      - run: sudo bash -c "echo 'character-set-server = utf8' >> /etc/mysql/mysql.conf.d/mysqld.cnf"
       - run: cat /etc/mysql/mysql.conf.d/mysqld.cnf
       - run: sudo systemctl start mysql.service
       - run: sudo add-apt-repository ppa:ondrej/php
