--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,7 +17,8 @@ jobs:
       - run: sudo rm -f /usr/bin/php && sudo ln -s /usr/bin/php5.6 /usr/bin/php
       - run: curl -O -L https://github.com/composer/composer/releases/download/1.6.5/composer.phar && sudo mv composer.phar /usr/bin/composer && sudo chmod +x /usr/bin/composer
       - run: mysql -u root -proot -e 'CREATE DATABASE test_database'
-      - run: mysql -u root -proot -e "GRANT ALL PRIVILEGES ON *.* TO 'user'@'localhost' IDENTIFIED WITH mysql_native_password BY 'pass';"
+      - run: mysql -u root -proot -e "CREATE USER 'user'@'localhost' IDENTIFIED WITH mysql_native_password BY 'pass';"
+      - run: mysql -u root -proot -e "GRANT ALL PRIVILEGES ON *.* TO 'user'@'localhost';"
       - uses: actions/checkout@v2
       - run: mysql -u root -proot test_database < ./db-schema/schema.sql
       - run: cp .github/workflows/config-template.php config.php 
