--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - run: sudo bash -c "echo 'collation-server = utf8_unicode_ci' >> /etc/mysql/mysql.conf.d/mysqld.cnf"
       - run: sudo bash -c "echo 'character-set-server = utf8' >> /etc/mysql/mysql.conf.d/mysqld.cnf"
+      - run: sudo bash -c "echo 'default-authentication-plugin=mysql_native_password' >> /etc/mysql/mysql.conf.d/mysqld.cnf"
       - run: cat /etc/mysql/mysql.conf.d/mysqld.cnf
       - run: sudo systemctl start mysql.service
       - run: sudo add-apt-repository ppa:ondrej/php
